--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -111,14 +111,56 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerdata"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteY="74dp">
+            android:layout_height="wrap_content">
 
-        </android.support.v7.widget.RecyclerView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Income:"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="@android:color/black"
+                android:padding="5dp"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerdata"
+                android:layout_width="match_parent"
+                android:layout_height="200dp">
+
+            </android.support.v7.widget.RecyclerView>
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Expense:"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="@android:color/black"
+                android:padding="5dp"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_expense"
+                android:layout_width="match_parent"
+                android:layout_height="200dp">
+
+            </android.support.v7.widget.RecyclerView>
+
+
+        </LinearLayout>
+
+        </ScrollView>
+
+
+        <!--Floating button area-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_gravity="bottom|end"
